# pyloggrid

./: .gitignore  CITATION.cff  README.md  paper.bib  paper.md  readthedocs.yaml  update.ps1  update.sh  updating.md
.github/workflows/: main.yml
log-grid/: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  hatch_build.py  install.ps1  install.sh  pyproject.toml  readme_pypi.md
log-grid/.gitlab/merge_request_templates/: Default.md
log-grid/Simulations/: NS3D.py  launch_treat_batch.sh  treat_3D.py
log-grid/Utils/: README.md  benchmarking_anyparam.py  benchmarking_parallel.py  install_clang15.sh  install_gcc12.sh  profile.bat  utils.md
log-grid/Utils/ETD4RK/: README.md  thresholds.py
log-grid/Utils/benchmark_c/: analyze_results.py  c_optimizer.py  run_benchmark.py
log-grid/Utils/plotting/: showcase.ipynb
log-grid/docs/: Makefile  benchmark.rst  conf.py  index.rst  loggrids.rst
log-grid/docs/documentation/: doc_convolver.rst  doc_github_gitlab.rst  doc_installation.rst  doc_performance.rst  doc_plotting.rst  doc_saved_data_format.rst  doc_solvers.rst  doc_using_the_solver.rst  documentation.rst
log-grid/docs/static/code/: HRB.py  treat_HRB.py
log-grid/docs/tutorial/: tutorial.rst  tutorial_analyzing_output.rst  tutorial_first_simu.rst  tutorial_going_further.rst  tutorial_installation.rst
log-grid/docs/tutorial/tuto_HRB/: tutorial_HRB.rst  tutorial_HRB_context.rst  tutorial_HRB_implementation.rst  tutorial_HRB_results.rst
log-grid/docs/tutorial/tuto_basic/: tutorial_analyzing_output.rst  tutorial_basic.rst  tutorial_first_simu.rst  tutorial_installation.rst
log-grid/pyloggrid/: __init__.py
log-grid/pyloggrid/Libs/: IOLib.py  __init__.py  custom_logger.py  datasci.py  misc.py  plotLib.py  singlethread_numpy.py
log-grid/pyloggrid/LogGrid/: DataExplorer.py  Framework.py  Grid.py  Makefile  Makefile.windows  __init__.py  compute_convolution_kernel.pyx  convolver_c.c  ms_stdint.h  setup_linux.py  setup_windows.py
log-grid/tests/Libs/: test_IOLib.py  test_custom_logger.py  test_datasci.py  test_misc.py  test_singlethread_numpy.py
log-grid/tests/LogGrid/: test_Grid.py
