[tool.poetry]
name = "pyloggrid"
version = "2.1.0"
description = "A python library to perform simulations on logarithmic lattices"
authors = ["Amaury Barral <amaury.barral@protonmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
rkstiff = "^0.3.0"
joblib = "^1.2.0"  # parallelization
scienceplots = "^2.0.1"  # pyplot styles
cython = "^0.29.34"  # Compilation
pyqt5 = "^5.15.9"   # allow matplotlib to display figures
imageio = "^2.28.1"  # make videos
imageio-ffmpeg = "^0.4.8"  # ^
orjson = "^3.8.11"  # read .json, more standard-compliant that ujson, fast
h5py = "^3.8.0"  # manipulate hdf5 files
pyyaml = "<5.4"  # pyyaml is broken with cython 3, check if fixed at some point (last checked sept 2023)

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"  # test with coverage
deepdiff = "^6.3.0"  # compare content of list/directories (for tests)
pyprof2calltree = "^1.4.5"  # profile python scripts
flake8 = "^6.0.0"
pre-commit = "^3.3.1"
isort = "5.12.0"
black = "23.3.00"
pycln = "2.1.3"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"  # documentation
sphinx-rtd-theme = "^1.2.0"  # ^
myst-parser = "1.0.0"  # ^
sphinx-autoapi = "^2.1.1"  # ^
ipython = "^8.16.1"

[tool.poetry.group.examples]
optional = true
[tool.poetry.group.examples.dependencies]
jupyter = "^1.0.0"
pandas = "^2.0.1"  # read .ods.
xarray = "^2023.4.2"  # read .ncdf

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pre-commit config
[tool.black]
line-length = 160

[tool.pycln]
all = true

[tool.isort]
line_length = 160
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
