[tool.poetry]
name = "pyloggrid"
version = "2.2.1"
description = "A python library to perform simulations on logarithmic lattices"
readme = """readme_pypi.md"""
authors = ["Amaury Barral <amaury.barral@protonmail.com>"]
license = "GPLv3"
include = [  # package build for .whl
    { path = "pyloggrid/LogGrid/*.dll", format = "wheel" },
    { path = "pyloggrid/LogGrid/*.pyd", format = "wheel" },
    { path = "pyloggrid/LogGrid/*.so", format = "wheel" }
]
repository = "https://drf-gitlab.cea.fr/amaury.barral/log-grid"
documentation = "https://pyloggrid.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.1"
scipy = "^1.11.2"
matplotlib = "^3.8.0"
rkstiff = "^0.3.0"
joblib = "^1.2.0"  # parallelization
scienceplots = "^2.0.1"  # pyplot styles
cython = "^3.0.4"  # Compilation
pyqt6 = "^6.5.3"   # allow matplotlib to display figures
imageio = "^2.28.1"  # make videos
imageio-ffmpeg = "^0.4.8"  # ^
orjson = "^3.8.11"  # read .json, more standard-compliant that ujson, fast
h5py = "^3.8.0"  # manipulate hdf5 files

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"  # test with coverage
deepdiff = "^6.3.0"  # compare content of list/directories (for tests)
pyprof2calltree = "^1.4.5"  # profile python scripts
flake8 = "^6.0.0"
pre-commit = "^3.3.1"
isort = "5.12.0"
black = "23.3.00"
pycln = "2.1.3"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"  # documentation
sphinx-rtd-theme = "^1.2.0"  # ^
myst-parser = "2.0.0"  # ^
sphinx-autoapi = "^3.0.0"  # ^
ipython = "^8.16.1"

[tool.poetry.group.examples]
optional = true
[tool.poetry.group.examples.dependencies]
jupyter = "^1.0.0"
pandas = "^2.0.1"  # read .ods.
xarray = "^2023.4.2"  # read .ncdf

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "setuptools", "numpy>=1.26", "Cython>3"]
build-backend = "poetry.core.masonry.api"

# pre-commit config
[tool.black]
line-length = 160

[tool.pycln]
all = true

[tool.isort]
line_length = 160
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
